# cmake-project-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hardclean.bat  hardclean.sh
cmake/: projectPreferences.cmake
cmake/toolchains/: linux-x64-crosscompile.cmake  linux-x86-crosscompile.cmake  mingw64-linux-x64.cmake  mingw64-linux-x86.cmake  native.cmake
src/executable/: CMakeLists.txt  logutil.h  main.cpp
src/executable/mathlib/: mathlib.h
src/shared/: CMakeLists.txt  shared.cpp
